app/components/input/Input.module.scss
@use "../../styles/variables" as *;

.inputContainer {
  margin-bottom: $spacing-md;
  display: flex;
  flex-direction: column;
}

.inputLabel {
  margin-bottom: $spacing-sm;
  font-weight: 600;
  color: $color-light;
}

.inputField {
  background-color: $color-bg-dark;
  padding: $spacing-sm;
  border-radius: $border-radius-sm;
  border: 1px solid $color-light;
  font-size: $font-size-md;
  transition: border-color 0.2s ease-in-out;
  font-family: var(--font-inter);
}
.inputField:focus {
  outline: none;
  border-color: $color-primary;
}

.inputField.errorActive {
  border-color: #ff5252;
}

.inputField.errorActive:focus {
  outline: none;
  border-color: #ff5252;
}

.errorMessage {
  color: #ff5252;
  font-size: $font-size-md;
  margin-top: $spacing-sm;
}

.selectWrapper {
  position: relative;
}

select.inputField {
  width: 100%;
  appearance: none;
  cursor: pointer;
  padding-right: $--spacing-xxl;
  option {
    background: $--color-bg-dark;
  }
}

.chevron {
  position: absolute;
  right: $--spacing-md;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  display: flex;
  align-items: center;
}

.selectWrapper {
  position: relative;
}

select.inputField {
  width: 100%;
  appearance: none;
  cursor: pointer;
  padding-right: $--spacing-xxl;
  option {
    background: $--color-bg-dark;
  }
}

.chevron {
  position: absolute;
  right: $--spacing-md;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  display: flex;
  align-items: center;
}

